Bug 1298254 - Ensure that the flush-apz-repaints codepath also waits for pending SetTargetAPZCNotification messages on the controller thread before returning. r=dvander a=test-only

MozReview-Commit-ID: 5bY3TeJB4KN